Removed Unnecessary fields and transform all model to record